.luaurc add @packages

--- a/.luaurc
+++ b/.luaurc
@@ -4,6 +4,7 @@
     "LocalShadow": false
   },
   "aliases": {
-    "lune": "~/.lune/.typedefs/0.9.4/"
+    "lune": "~/.lune/.typedefs/0.8.9/",
+    "packages": "packages/"
   }
 }
