--- a/.luaurc
+++ b/.luaurc
@@ -5,6 +5,7 @@
   },
   "aliases": {
     "lune": "~/.lune/.typedefs/0.8.9/",
-    "packages": "packages/"
+    "packages": "packages/",
+    "ast": "ast/"
   }
 }
